Added "Add-Opens" for UberJar